--- a/style/style.css
+++ b/style/style.css
@@ -66,7 +66,7 @@ section span {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 2rem;
 }
 
 h2 {
@@ -92,8 +92,7 @@ img {
 .navbar,
 .home-links,
 .nav-item {
-list-style-type: none;
-
+    list-style-type: none;
 }
 
 .site-header {
@@ -135,10 +134,10 @@ a:hover:not(.nav-logo) {
 
 .editor,
 .sunset {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
-    gap: 5rem;
+    justify-items: center;
 }
 
 @media (max-width: 768px) {
@@ -173,9 +172,11 @@ a:hover:not(.nav-logo) {
 
     .editor,
     .sunset {
-        align-items: center;
-        justify-content: center;
+        display: flex;
         flex-direction: column-reverse;
+        gap: 1em;
+        align-items: center;
+        justify-items: center;
     }
 }
 
