--- a/style/style.css
+++ b/style/style.css
@@ -31,10 +31,11 @@ body {
     display: grid;
     grid-template-rows: repeat(3, auto);
     overflow-x: hidden;
+    width: 100%;
 }
 
 main {
-    max-width: 100%;
+    width: 100%;
     margin-inline: auto;
 }
 
@@ -51,7 +52,7 @@ section span {
     text-decoration-style: wavy;
     text-decoration-color: var(--clr-accent);
     text-decoration-thickness: 6px;
-    text-underline-offset: 21px;
+    text-underline-offset: 10px;
 }
 
 section span {
@@ -59,7 +60,7 @@ section span {
     text-decoration-style: wavy;
     text-decoration-color: var(--clr-accent);
     text-decoration-thickness: 6px;
-    text-underline-offset: 10px;
+    text-underline-offset: 8px;
 }
 
 #about-section {
