--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
 
     --clr-text: black;
     --clr-accent: #008000;
-    --clr-bg: #f2f2f2;
+    --clr-bg: hsl(0, 0%, 97%);
 
     --fw-300: 300;
     --fw-400: 400;
@@ -19,174 +19,194 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
 
-    body {
-        font-family: var(--ff-body);
-        font-size: 1rem;
-        color: var(--clr-text);
-        background-color: white;
-    
-    
-        display: grid;
-        grid-template-rows: repeat(3, auto);
+body {
+    font-family: var(--ff-body);
+    font-size: 1rem;
+    color: var(--clr-text);
+    background-color: var(--clr-bg);
+    overflow-x: hidden;
+    min-height: 100vh;
+
+
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+}
+
+nav {
+    background-color: white;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    border-bottom: 0.5px solid var(--clr-accent);
+}
+
+.nav-logo {
+    font-size: 1.5rem;
+    font-weight: var(--fw-500);
+}
+
+nav ul {
+    width: 100%;
+    list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+nav li {
+    height: 75px;
+}
+
+nav a {
+    height: 100%;
+    padding: 0 25px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: var(--clr-text);
+    font-weight: var(--fw-400);
+}
+
+nav a:hover:not(.nav-logo) {
+    color: var(--clr-accent);
+}
+
+nav li:first-child {
+    margin-right: auto;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 999;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+main {
+    width: 100%;
+    margin-inline: auto;
+}
+
+section {
+    padding: 25px 80px;
+}
+
+.sunset {
+    margin-top: 2rem;
+}
+
+section span {
+    text-decoration: underline;
+    text-decoration-style: wavy;
+    text-decoration-color: var(--clr-accent);
+    text-decoration-thickness: 4px;
+    text-underline-offset: 3px;
+}
+
+#about-section {
+    padding-top: 1rem;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.25rem;
+    font-weight: var(--fw-400);
+}
+
+p {
+    line-height: 2;
+    margin-top: 1rem;
+    max-width: 65ch;
+    font-weight: var(--fw-300);
+}
+
+img {
+    height: 500px;
+    max-width: 100%;
+}
+
+.editor,
+.sunset {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+.menu-btn {
+    display: none;
+}
+
+@media(max-width: 800px) {
+    .hideOnMobile {
+        display: none;
     }
-
-    section {
-        padding: 25px 100px;
+    .menu-btn {
+        display: block;
     }
+}
 
-    .sunset {
-        margin-top: 2rem;
+@media(max-width: 450px) {
+    .sidebar {
+        width: 100%;
     }
+}
 
+@media (max-width: 768px) {
     section span {
         text-decoration: underline;
         text-decoration-style: wavy;
         text-decoration-color: var(--clr-accent);
-        text-decoration-thickness: 6px;
-        text-underline-offset: 21px;
-    }
-
-    section span {
-        text-decoration: underline;
-        text-decoration-style: wavy;
-        text-decoration-color: var(--clr-accent);
-        text-decoration-thickness: 6px;
-        text-underline-offset: 10px;
-    }
-
-    #about-section {
-        padding-top: 1rem;
+        text-decoration-thickness: 4px;
+        text-underline-offset: 8px;
     }
 
     h1 {
-        font-size: 4rem;
+        font-size: 2.5rem;
     }
 
     h2 {
-        font-size: 1.25rem;
+        font-size: 1.125rem;
         font-weight: var(--fw-400);
     }
 
     p {
         line-height: 2;
-        margin-top: 1rem;
+        margin-top: 0.9375rem;
         max-width: 65ch;
         font-weight: var(--fw-300);
     }
 
     img {
-
-        height: 500px;
+        height: 400px;
         max-width: 100%;
-    }
-
-    .site-header,
-    .nav-logo,
-    .navbar,
-    .home-links,
-    .nav-item {
-    /*     border: 1px solid black; */
-    list-style-type: none;
-
-    }
-
-    .site-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        padding: 1rem 5rem;
-        background-color: var(--clr-bg);
-        border-bottom: 3px solid var(--clr-accent);
-        position: sticky;
-        top: 0;
-    }
-
-    .nav-logo {
-        text-decoration: none;
-        font-size: var(--fs-logo);
-        color: var(--clr-text);
-        font-weight: var(--fw-600);
-    }
-
-    }
-
-    .home-links {
-        display: flex;
-    }
-
-    .home-links li a {
-        text-decoration: none;
-        color: var(--clr-text);
-        font-weight: var(--fw-500);
-    }
-
-    a:hover:not(.nav-logo) {
-        color: var(--clr-accent);
-    }
-
-    .nav-item {
-        padding-left: 2rem;
-    }
-
-    .content {
-        margin-inline: auto;
-        max-inline-size: 1500px;
     }
 
     .editor,
     .sunset {
         display: flex;
-        justify-content: center;
+        flex-direction: column-reverse;
+        gap: 1em;
         align-items: center;
-        gap: 5rem;
-    }
-
-    @media (max-width: 768px) {
-        section span {
-            text-decoration: underline;
-            text-decoration-style: wavy;
-            text-decoration-color: var(--clr-accent);
-            text-decoration-thickness: 4px;
-            text-underline-offset: 8px;
-        }
-
-
-        h1 {
-            font-size: 2.5rem;
-        }
-    
-        h2 {
-            font-size: 1.125rem;
-            font-weight: var(--fw-400);
-        }
-
-        p {
-            line-height: 2;
-            margin-top: 0.9375rem;
-            max-width: 65ch;
-            font-weight: var(--fw-300);
-        }
-
-        img {
-            height: 400px;
-            max-width: 100%;
-        }
-
-        .editor,
-        .sunset {
-            align-items: center;
-            justify-content: center;
-            flex-direction: column-reverse;
-        }
-    }
-
-    footer {
-        background-color: hsl(0, 100%, 10%);
+        justify-items: center;
     }
 }
 
+footer {
+    background-color: hsl(0, 100%, 10%);
+}
 
 
 
